@@ -48,7 +48,7 @@
 	  * Fix compilation when zlib not present (Philip Kendall,
 	    Fredrick Meunier).
 	  * Two .szx snapshot fixes (Philip Kendall).
-	  * Two .tzx tape image fixes (Philip Kendall).
+	  * Three .tzx tape image fixes (Philip Kendall).
 
 2004-07-16  Philip Kendall  <pak21-spectrum@srcf.ucam.org>
 
