@@ -386,3 +386,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20070121 ChangeLog: bring up to date.
 20070121 tzx_write.c: support for writing 0x19 blocks.
 20070121 tzx_write.c: we now write TZX v1.20 files.
+20070121 ChangeLog,tzx_write.c: length for archive info blocks was being
+	 written out one byte too long.
